--- a/index.html
+++ b/index.html
@@ -16,23 +16,31 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
         <div class="container">
-            <a href="#" class="navbar-logo">The Giggly Fox</a>
+            <a class="navbar-brand" href="">
+                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top"
+                    alt="gigglyfox logo">
+                The Giggly Fox
+            </a>
 
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="Home" class="nav-link">Home</a>
+                        <a href="#Home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Shows" class="nav-link">Shows</a>
+                        <a href="#Shows" class="nav-link">Shows</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Comedians" class="nav-link">Comedians</a>
+                        <a href="#Comedians" class="nav-link">Comedians</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Contact" class="nav-link">Contact</a>
+                        <a href="#Contact" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
