Add carousel hero image and captions

--- a/index.html
+++ b/index.html
@@ -51,7 +51,39 @@
     </nav>
 
     <!--Header-->
-    
+    <div id="HeroImageCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item c-item active">
+                <img src="assets/images/club1slide.jpg" class="d-block w-100 c-img" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
+                    <p class="fs-1">Leicester Comedy Club</p>
+                </div>
+            </div>
+            <div class="carousel-item c-item">
+                <img src="assets/images/club2slide.jpg" class="d-block w-100 c-img" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
+                    <p class="fs-1">Leicester Comedy Club</p>
+                </div>
+            </div>
+            <div class="carousel-item c-item">
+                <img src="assets/images/club3slide.jpg" class="d-block w-100 c-img" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="display-1 text-uppercase fw-bolder">The Giggly Fox</h1>
+                    <p class="fs-1">Leicester Comedy Club</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#HeroImageCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#HeroImageCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     
 
 </body>
