--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="">
-                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top"
-                    alt="gigglyfox logo">
+                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top" alt="gigglyfox logo">
                 The Giggly Fox
             </a>
 
@@ -84,8 +83,32 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    
 
+    <!--About us section-->
+    <div class="container">
+        <div class="aboutus col-8 bg-dark text-white">
+            <h2>ABOUT US</h2>
+            <p>Welcome to The Giggly Fox, Leicester's premier destination for laughter and a good time! Situated in the
+                heart of the city,
+                our venue is the go-to spot for an unforgettable evening of side-splitting comedy and good times.</p>
+
+            <p>Established with a passion for spreading joy and merriment, The Giggly Fox has been a staple in
+                Leicester's
+                entertainment scene for over a decade. We take pride in curating an eclectic lineup of comedic talent,
+                bringing together
+                the finest stand-up comedians, improv artists, and sketch groups from near and far. Whether you're a
+                local
+                resident or a visitor to our vibrant city, our doors are wide open, ready to welcome you into a world of
+                unbridled
+                laughter.</p>
+
+            <p>Join us at The Giggly Fox, where laughter knows no bounds and comedic brilliance takes center stage. Get
+                ready to laugh
+                until your cheeks hurt and your worries disappear, for in this little corner of Leicester, happiness is
+                the punchline.
+                We can't wait to see you and share in the joy of laughter together!</p>
+        </div>
+    </div>
 </body>
 
 </html>
