--- a/index.html
+++ b/index.html
@@ -109,6 +109,20 @@
                 We can't wait to see you and share in the joy of laughter together!</p>
         </div>
     </div>
+
+    <!--Waves-->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#ff5500" fill-opacity="1"
+            d="M0,160L48,181.3C96,203,192,245,288,240C384,235,480,181,576,144C672,107,768,85,864,90.7C960,96,1056,128,1152,165.3C1248,203,1344,245,1392,266.7L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#ff5500" fill-opacity="1"
+            d="M0,160L48,181.3C96,203,192,245,288,240C384,235,480,181,576,144C672,107,768,85,864,90.7C960,96,1056,128,1152,165.3C1248,203,1344,245,1392,266.7L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+        </path>
+    </svg>
+    
+    <!--Shows-->
 </body>
 
 </html>
