--- a/index.html
+++ b/index.html
@@ -121,8 +121,37 @@
             d="M0,160L48,181.3C96,203,192,245,288,240C384,235,480,181,576,144C672,107,768,85,864,90.7C960,96,1056,128,1152,165.3C1248,203,1344,245,1392,266.7L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
         </path>
     </svg>
-    
+
     <!--Shows-->
+            <section id="upcoming-shows" class="upcoming-shows">
+                <div class="shows-container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2 class="shows-header">UPCOMING SHOWS</h2>
+                        </div>
+                    </div>
+                    <div class="row upcoming-shows">
+                        <div class="col-12 col-md-4">
+                            <h3 class="text-center showname">FRIDAY  |  18th of August</h3>
+                            <a href="#" target="_blank"><img src="assets/images/show1.png" 
+                                                             class="img-fluid mx-auto d-block" width="202" height="202" 
+                                                             alt="Poster of comedy show1"></a>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <h3 class="text-center showname">SATURDAY  |  19th of August</h3>
+                            <a href="#" target="_blank"><img src="assets/images/show2.png"
+                                                         class="img-fluid mx-auto d-block" width="200" height="202"
+                                                         alt="Poster of comedy show2"></a>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <h3 class="text-center showname">SUNDAY  |  20th of August</h3>
+                            <a href="#" target="_blank"><img src="assets/images/show3.png"
+                                                         class="img-fluid mx-auto d-block" width="202" height="202"
+                                                         alt="Poster of comedy show3"></a>
+                        </div>
+                    </div>
+                </div>
+
 </body>
 
 </html>
