--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="#Home" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="#Shows" class="nav-link">Shows</a>
@@ -123,34 +123,50 @@
     </svg>
 
     <!--Shows-->
-            <section id="upcoming-shows" class="upcoming-shows">
-                <div class="shows-container">
-                    <div class="row">
-                        <div class="col-12">
-                            <h2 class="shows-header">UPCOMING SHOWS</h2>
-                        </div>
-                    </div>
-                    <div class="row upcoming-shows">
-                        <div class="col-12 col-md-4">
-                            <h3 class="text-center showname">FRIDAY  |  18th of August</h3>
-                            <a href="#" target="_blank"><img src="assets/images/show1.png" 
-                                                             class="img-fluid mx-auto d-block" width="202" height="202" 
-                                                             alt="Poster of comedy show1"></a>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <h3 class="text-center showname">SATURDAY  |  19th of August</h3>
-                            <a href="#" target="_blank"><img src="assets/images/show2.png"
-                                                         class="img-fluid mx-auto d-block" width="200" height="202"
-                                                         alt="Poster of comedy show2"></a>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <h3 class="text-center showname">SUNDAY  |  20th of August</h3>
-                            <a href="#" target="_blank"><img src="assets/images/show3.png"
-                                                         class="img-fluid mx-auto d-block" width="202" height="202"
-                                                         alt="Poster of comedy show3"></a>
-                        </div>
-                    </div>
+    <section id="upcoming-shows" class="upcoming-shows">
+        <div class="shows-container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="shows-header">UPCOMING SHOWS</h2>
                 </div>
+            </div>
+            <div class="row upcoming-shows">
+                <div class="col-12 col-md-4">
+                    <h3 class="text-center showname">FRIDAY | 18th of August</h3>
+                    <a href="#" target="_blank"><img src="assets/images/show1.png" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Poster of comedy show1"></a>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="text-center showname">SATURDAY | 19th of August</h3>
+                    <a href="#" target="_blank"><img src="assets/images/show2.png" class="img-fluid mx-auto d-block"
+                            width="200" height="202" alt="Poster of comedy show2"></a>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="text-center showname">SUNDAY | 20th of August</h3>
+                    <a href="#" target="_blank"><img src="assets/images/show3.png" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Poster of comedy show3"></a>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="text-center showname">FRIDAY | 25th of August</h3>
+                    <a href="#" target="_blank"><img src="assets/images/show4.png" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Poster of comedy show4"></a>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="text-center showname">SATURDAY| 26th of August</h3>
+                    <a href="#" target="_blank"><img src="assets/images/show5.png" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Poster of comedy show5"></a>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="text-center showname">SUNDAY | 27th of August</h3>
+                    <a href="#" target="_blank"><img src="assets/images/show6.jpg" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Poster of comedy show6"></a>
+                </div>
+            </div>
+        </div>
+        <div class="text-center col-12 d-md-block">
+            <button class="btn btn-primary" type="button">View all upcoming shows</button>
+        </div>
+    </section>
 
 </body>
 
