Add comedians section with their respective images and view all comedians button

--- a/index.html
+++ b/index.html
@@ -168,63 +168,73 @@
         </div>
     </section>
 
-<!--Waves-->
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#ff5500" fill-opacity="1"
-        d="M0,160L48,181.3C96,203,192,245,288,240C384,235,480,181,576,144C672,107,768,85,864,90.7C960,96,1056,128,1152,165.3C1248,203,1344,245,1392,266.7L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-    </path>
-</svg>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-    <path fill="#ff5500" fill-opacity="1"
-        d="M0,160L48,181.3C96,203,192,245,288,240C384,235,480,181,576,144C672,107,768,85,864,90.7C960,96,1056,128,1152,165.3C1248,203,1344,245,1392,266.7L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
-    </path>
-</svg>
+    <!--Waves-->
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#ff5500" fill-opacity="1"
+            d="M0,160L48,181.3C96,203,192,245,288,240C384,235,480,181,576,144C672,107,768,85,864,90.7C960,96,1056,128,1152,165.3C1248,203,1344,245,1392,266.7L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#ff5500" fill-opacity="1"
+            d="M0,160L48,181.3C96,203,192,245,288,240C384,235,480,181,576,144C672,107,768,85,864,90.7C960,96,1056,128,1152,165.3C1248,203,1344,245,1392,266.7L1440,288L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+        </path>
+    </svg>
 
-<!--Comedians-->
-<section id="upcoming-shows" class="upcoming-shows">
-    <div class="shows-container">
-        <div class="row">
-            <div class="col-12">
-                <h2 class="shows-header">COMEDIANS</h2>
+    <!--Comedians-->
+    <section id="upcoming-shows" class="upcoming-shows">
+        <div class="shows-container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="shows-header">COMEDIANS</h2>
+                </div>
+            </div>
+            <div class="row upcoming-shows">
+                <div class="col-12 col-md-6">
+                    <a href="#" target="_blank"><img src="assets/images/comic1.jpg" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Image of Max Vayne"></a>
+                    <h3 class="text-center showname">MAX VAYNE</h3>
+                </div>
+                <div class="col-12 col-md-6">
+                    <a href="#" target="_blank"><img src="assets/images/comic2.jpg" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Image of Preston Harvey"></a>
+                    <h3 class="text-center showname">PRESTON HARVEY</h3>
+                </div>
+                <div class="col-12 col-md-6">
+                    <a href="#" target="_blank"><img src="assets/images/comic3.jpg" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Image of Sadie Padler"></a>
+                    <h3 class="text-center showname">SADIE PADLER</h3>
+                </div>
+                <div class="col-12 col-md-6">
+                    <a href="#" target="_blank"><img src="assets/images/comic4.jpg" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Image of Nadine Cross"></a>
+                    <h3 class="text-center showname">NADINE CROSS</h3>
+                </div>
+                <div class="col-12 col-md-6 d-none d-md-block">
+                    <a href="#" target="_blank"><img src="assets/images/comic5.jpg" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Image of Ada Wang"></a>
+                    <h3 class="text-center showname">ADA WANG</h3>
+                </div>
+                <div class="col-12 col-md-6 d-none d-md-block">
+                    <a href="#" target="_blank"><img src="assets/images/comic6.jpg" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Image of Gordon Freyman"></a>
+                    <h3 class="text-center showname">GORDON FREYMAN</h3>
+                </div>
+                <div class="col-12 col-md-6 d-none d-md-block">
+                    <a href="#" target="_blank"><img src="assets/images/comic7.jpg" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Image of Nathan Dreyk"></a>
+                    <h3 class="text-center showname">NATHAN DREYK</h3>
+                </div>
+                <div class="col-12 col-md-6 d-none d-md-block">
+                    <a href="#" target="_blank"><img src="assets/images/comic8.jpg" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Image of Sheeva Alomar"></a>
+                    <h3 class="text-center showname">SHEEVA ALOMAR</h3>
+                </div>
             </div>
         </div>
-        <div class="row upcoming-shows">
-            <div class="col-12 col-md-4">
-                <h3 class="text-center showname">FRIDAY | 18th of August</h3>
-                <a href="#" target="_blank"><img src="assets/images/show1.png" class="img-fluid mx-auto d-block"
-                        width="202" height="202" alt="Poster of comedy show1"></a>
-            </div>
-            <div class="col-12 col-md-4">
-                <h3 class="text-center showname">SATURDAY | 19th of August</h3>
-                <a href="#" target="_blank"><img src="assets/images/show2.png" class="img-fluid mx-auto d-block"
-                        width="200" height="202" alt="Poster of comedy show2"></a>
-            </div>
-            <div class="col-12 col-md-4">
-                <h3 class="text-center showname">SUNDAY | 20th of August</h3>
-                <a href="#" target="_blank"><img src="assets/images/show3.png" class="img-fluid mx-auto d-block"
-                        width="202" height="202" alt="Poster of comedy show3"></a>
-            </div>
-            <div class="col-12 col-md-4 d-none d-md-block">
-                <h3 class="text-center showname">FRIDAY | 25th of August</h3>
-                <a href="#" target="_blank"><img src="assets/images/show4.png" class="img-fluid mx-auto d-block"
-                        width="202" height="202" alt="Poster of comedy show4"></a>
-            </div>
-            <div class="col-12 col-md-4 d-none d-md-block">
-                <h3 class="text-center showname">SATURDAY | 26th of August</h3>
-                <a href="#" target="_blank"><img src="assets/images/show5.png" class="img-fluid mx-auto d-block"
-                        width="202" height="202" alt="Poster of comedy show5"></a>
-            </div>
-            <div class="col-12 col-md-4 d-none d-md-block">
-                <h3 class="text-center showname">SUNDAY | 27th of August</h3>
-                <a href="#" target="_blank"><img src="assets/images/show6.jpg" class="img-fluid mx-auto d-block"
-                        width="202" height="202" alt="Poster of comedy show6"></a>
-            </div>
+        <div class="text-center col-12 d-md-block">
+            <button class="btn btn-primary" aria-label="View all comedians" type="button">View all comedians</button>
         </div>
-    </div>
-    <div class="text-center col-12 d-md-block">
-        <button class="btn btn-primary" type="button">View all upcoming shows</button>
-    </div>
-</section>
+    </section>
 
 
 
