--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <link href="assets/css/style.css" rel="stylesheet">
 
@@ -226,8 +227,8 @@
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
                     <a href="#" target="_blank"><img src="assets/images/comic8.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Image of Sheeva Alomar"></a>
-                    <h3 class="text-center showname">SHEEVA ALOMAR</h3>
+                            width="202" height="202" alt="Image of Sheeva Palomar"></a>
+                    <h3 class="text-center showname">SHEEVA PALOMAR</h3>
                 </div>
             </div>
         </div>
@@ -236,6 +237,25 @@
         </div>
     </section>
 
+    <!--Footer-->
+    <footer class="bg-dark text-center text-white">
+        <div class="container p-4 pb-0">
+            <section class="mb-4">
+                <a class="btn btn-outline-light btn-floating m-1" href="http://facebook.com" target="_blank"
+                    role="button"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1" href="http://twitter.com" target="_blank"
+                    role="button"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1" href="http://instagram.com" target="_blank"
+                    role="button"><i class="fa-brands fa-instagram"></i></a>
+            </section>
+        </div>
+
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2023 Copyright:
+            <a class="text-white" href="index.html">TheGigglyFox.com</a>
+        </div>
+
+    </footer>
 
 
 </body>
