Add newsletter signup form to index.html and its css rules in style.css

--- a/index.html
+++ b/index.html
@@ -238,9 +238,20 @@
         </div>
     </section>
 
-
-
-
+    <!--Newsletter signup form-->
+    <div class="newsletter-container">
+        <div class="card">
+            <p>Don't miss our updates, subscribe to get notified when shows are added!</p>
+            <form action="#" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                class="validate" novalidate>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email"
+                    required>
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name=""
+                        tabindex="-1" value=""></div>
+                <div class="clear"></div>
+                <button name="subscribe" id="mc-embedded-subscribe" class="button" aria-label="Submit" type="submit">Subscribe me</button>
+            </form>
+        </div>
     </div>
 
     <!--Footer-->
