Add thank you page redirect from newsletter form

--- a/thankyoupage.html
+++ b/thankyoupage.html
@@ -87,6 +87,19 @@
     </div>
 
 
+    <section>
+        <div class="thankyoupage">
+            <h1>Thank you for subscribing!</h1>
+            <p>You are awesome! Cheers for filling that out and choosing to keep up with our updates. Keep being you, you
+               absolute legend!
+            </p>
+            <a href="index.html">
+                Back to home
+            </a>
+        </div>
+    </section>
+
+
     <!--Footer-->
     <footer class="bg-dark text-center text-white">
         <div class="container p-4 pb-0">
