--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class="newsletter-container">
         <div class="card">
             <p>Don't miss our updates, subscribe to get notified when shows are added!</p>
-            <form action="#" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+            <form action="thankyoupage.html" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
                 class="validate" novalidate>
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email"
                     required>
@@ -273,8 +273,6 @@
         </div>
 
     </footer>
-
-
 </body>
 
 </html>
