Add comedians.html page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="#Shows" class="nav-link">Shows</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Comedians" class="nav-link">Comedians</a>
+                        <a href="comedians.html" class="nav-link">Comedians</a>
                     </li>
                     <li class="nav-item">
                         <a href="#Contact" class="nav-link">Contact</a>
@@ -192,43 +192,46 @@
             </div>
             <div class="row upcoming-shows">
                 <div class="col-12 col-md-6">
-                    <a href="#" target="_blank"><img src="assets/images/comic1.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Image of Max Vayne"></a>
+                    <a href="comedians.html" target="_blank"><img src="assets/images/comic1.jpg"
+                            class="img-fluid mx-auto d-block" width="202" height="202" alt="Image of Max Vayne"></a>
                     <h3 class="text-center showname">MAX VAYNE</h3>
                 </div>
                 <div class="col-12 col-md-6">
-                    <a href="#" target="_blank"><img src="assets/images/comic2.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Image of Preston Harvey"></a>
+                    <a href="comedians.html" target="_blank"><img src="assets/images/comic2.jpg"
+                            class="img-fluid mx-auto d-block" width="202" height="202"
+                            alt="Image of Preston Harvey"></a>
                     <h3 class="text-center showname">PRESTON HARVEY</h3>
                 </div>
                 <div class="col-12 col-md-6">
-                    <a href="#" target="_blank"><img src="assets/images/comic3.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Image of Sadie Padler"></a>
+                    <a href="comedians.html" target="_blank"><img src="assets/images/comic3.jpg"
+                            class="img-fluid mx-auto d-block" width="202" height="202" alt="Image of Sadie Padler"></a>
                     <h3 class="text-center showname">SADIE PADLER</h3>
                 </div>
                 <div class="col-12 col-md-6">
-                    <a href="#" target="_blank"><img src="assets/images/comic4.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Image of Nadine Cross"></a>
+                    <a href="comedians.html" target="_blank"><img src="assets/images/comic4.jpg"
+                            class="img-fluid mx-auto d-block" width="202" height="202" alt="Image of Nadine Cross"></a>
                     <h3 class="text-center showname">NADINE CROSS</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <a href="#" target="_blank"><img src="assets/images/comic5.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Image of Ada Wang"></a>
+                    <a href="comedians.html" target="_blank"><img src="assets/images/comic5.jpg"
+                            class="img-fluid mx-auto d-block" width="202" height="202" alt="Image of Ada Wang"></a>
                     <h3 class="text-center showname">ADA WANG</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <a href="#" target="_blank"><img src="assets/images/comic6.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Image of Gordon Freyman"></a>
+                    <a href="comedians.html" target="_blank"><img src="assets/images/comic6.jpg"
+                            class="img-fluid mx-auto d-block" width="202" height="202"
+                            alt="Image of Gordon Freyman"></a>
                     <h3 class="text-center showname">GORDON FREYMAN</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <a href="#" target="_blank"><img src="assets/images/comic7.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Image of Nathan Dreyk"></a>
+                    <a href="comedians.html" target="_blank"><img src="assets/images/comic7.jpg"
+                            class="img-fluid mx-auto d-block" width="202" height="202" alt="Image of Nathan Dreyk"></a>
                     <h3 class="text-center showname">NATHAN DREYK</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <a href="#" target="_blank"><img src="assets/images/comic8.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Image of Sheeva Palomar"></a>
+                    <a href="comedians.html" target="_blank"><img src="assets/images/comic8.jpg"
+                            class="img-fluid mx-auto d-block" width="202" height="202"
+                            alt="Image of Sheeva Palomar"></a>
                     <h3 class="text-center showname">SHEEVA PALOMAR</h3>
                 </div>
             </div>
@@ -242,14 +245,15 @@
     <div class="newsletter-container">
         <div class="card">
             <p>Don't miss our updates, subscribe to get notified when shows are added!</p>
-            <form action="thankyoupage.html" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                class="validate" novalidate>
+            <form action="thankyoupage.html" method="get" id="mc-embedded-subscribe-form"
+                name="mc-embedded-subscribe-form" class="validate" novalidate>
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email"
                     required>
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name=""
                         tabindex="-1" value=""></div>
                 <div class="clear"></div>
-                <button name="subscribe" id="mc-embedded-subscribe" class="button" aria-label="Submit" type="submit">Subscribe me</button>
+                <button name="subscribe" id="mc-embedded-subscribe" class="button" aria-label="Submit"
+                    type="submit">Subscribe me</button>
             </form>
         </div>
     </div>
