Add main title header to comedians.html page

--- a/comedians.html
+++ b/comedians.html
@@ -86,6 +86,11 @@
         </button>
     </div>
 
+    <!--Main title-->
+    <div class="main-title text-center text-white">
+        <p>Comedians</p>
+    </div>
+
     <!--Footer-->
     <footer class="bg-dark text-center text-white">
         <div class="container p-4 pb-0">
