Add comedian image and bio to comedians page

--- a/comedians.html
+++ b/comedians.html
@@ -87,8 +87,28 @@
     </div>
 
     <!--Main title-->
-    <div class="main-title text-center text-white">
+    <div class="main-title text-white">
         <p>Comedians</p>
+    </div>
+
+    <!--Comedians pictures and bio-->
+    <div class="comedian-container">
+        <div class="row">
+            <div class="col-12 col-md-6 comedian-image">
+                <img src="assets/images/comic1.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                    alt="Image of Max Vayne"></a>
+            </div>
+            <div class="comedian-bio-container text-center">
+                <div class="comedian-name">
+                    MAX VAYNE
+                </div>
+                <div class="comedian-bio">
+                    <p>Max Vayne is a Leicester-born comedic sensation. With witty observations and charming banter, he brings laughter to audiences
+                    nationwide. TV appearances, radio gigs, and charity work cement his influence. A master of one-liners, Adam's quick wit
+                    and charisma keep the world giggling. A true comedic gem with a bright future ahead.</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!--Footer-->
