Add pictures and bio for all the comedians.

--- a/comedians.html
+++ b/comedians.html
@@ -103,13 +103,207 @@
                     MAX VAYNE
                 </div>
                 <div class="comedian-bio">
-                    <p>Max Vayne is a Leicester-born comedic sensation. With witty observations and charming banter, he brings laughter to audiences
-                    nationwide. TV appearances, radio gigs, and charity work cement his influence. A master of one-liners, Adam's quick wit
-                    and charisma keep the world giggling. A true comedic gem with a bright future ahead.</p>
+                    <p>Max Vayne is a Leicester-born comedic sensation. With witty observations and charming banter, he
+                        brings laughter to audiences
+                        nationwide. TV appearances, radio gigs, and charity work cement his influence. A master of
+                        one-liners, Adam's quick wit
+                        and charisma keep the world giggling. A true comedic gem with a bright future ahead.</p>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="comedian-container">
+        <div class="row">
+            <div class="col-12 col-md-6 comedian-image">
+                <img src="assets/images/comic2.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                    alt="Image of Preston Harvey"></a>
+            </div>
+            <div class="comedian-bio-container text-center">
+                <div class="comedian-name">
+                    PRESTON HARVEY
+                </div>
+                <div class="comedian-bio">
+                    <p>A hilarious comedian hailing from Newcastle! With a natural gift for comedy, he crafts uproarious
+                        laughter through
+                        clever quips and a magnetic stage presence. Preston's comedic brilliance lights up stages across
+                        the nation, leaving
+                        audiences in stitches. A rising star set to conquer the comedic world!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="comedian-container">
+        <div class="row">
+            <div class="col-12 col-md-6 comedian-image">
+                <img src="assets/images/comic3.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                    alt="Image of Sadie Padler"></a>
+            </div>
+            <div class="comedian-bio-container text-center">
+                <div class="comedian-name">
+                    SADIE PADLER
+                </div>
+                <div class="comedian-bio">
+                    <p>Born in the heart of Ireland, Sadie's comedic journey started with her razor-sharp wit
+                        and captivating storytelling. Her acts are a rollercoaster of laughter, touching on everything
+                        from Irish
+                        culture to everyday absurdities. A comedic force to be reckoned with, Sadie leaves audiences in
+                        stitches, making her
+                        mark on the world of comedy.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="comedian-container">
+        <div class="row">
+            <div class="col-12 col-md-6 comedian-image">
+                <img src="assets/images/comic4.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                    alt="Image of Nadine Cross"></a>
+            </div>
+            <div class="comedian-bio-container text-center">
+                <div class="comedian-name">
+                    NADINE CROSS
+                </div>
+                <div class="comedian-bio">
+                    <p>With a charming British flair, Nadine delivers side-splitting humor and
+                        relatable anecdotes that resonate with audiences. Her quick wit and magnetic stage presence keep
+                        the laughter flowing. A
+                        rising star on the London comedy scene, Nadine is destined to leave a lasting impression with
+                        her comedic prowess.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="comedian-container">
+        <div class="row">
+            <div class="col-12 col-md-6 comedian-image">
+                <img src="assets/images/comic5.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                    alt="Image of Ada Wang"></a>
+            </div>
+            <div class="comedian-bio-container text-center">
+                <div class="comedian-name">
+                    ADA WANG
+                </div>
+                <div class="comedian-bio">
+                    <p>Combining her rich cultural background with sharp wit, Ada's performances are a delightful blend
+                        of East and West. From
+                        cultural quirks to modern-day mishaps, she finds humor in it all. With her infectious laughter
+                        and engaging presence,
+                        Ada is winning hearts on stages worldwide.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="comedian-container">
+        <div class="row">
+            <div class="col-12 col-md-6 comedian-image">
+                <img src="assets/images/comic6.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                    alt="Image of Gordon Freyman"></a>
+            </div>
+            <div class="comedian-bio-container text-center">
+                <div class="comedian-name">
+                    GORDON FREYMAN
+                </div>
+                <div class="comedian-bio">
+                    <p>The Scottish Comedy Maestro from Aberdeen! With a delightful blend of Scottish humor and clever
+                        anecdotes, Gordon lights
+                        up stages with uproarious laughter. His unique take on life has made him a beloved figure in the
+                        comedy
+                        scene. A true comedic gem from Aberdeen, Gordon leaves audiences in stitches wherever he
+                        performs.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="comedian-container">
+        <div class="row">
+            <div class="col-12 col-md-6 comedian-image">
+                <img src="assets/images/comic7.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                    alt="Image of Nathan Dreyk"></a>
+            </div>
+            <div class="comedian-bio-container text-center">
+                <div class="comedian-name">
+                    NATHAN DREYK
+                </div>
+                <div class="comedian-bio">
+                    <p>With an innate ability to find humor in everyday situations, Nathan brings uproarious laughter to
+                        audiences. His comedic
+                        charm and relatable stories make every show an unforgettable experience. A rising talent from
+                        Manchester, Nathan is set to
+                        conquer the comedy world with his infectious energy and charisma.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="comedian-container">
+        <div class="row">
+            <div class="col-12 col-md-6 comedian-image">
+                <img src="assets/images/comic8.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                    alt="Image of Sheeva Palomar"></a>
+            </div>
+            <div class="comedian-bio-container text-center">
+                <div class="comedian-name">
+                    SHEEVA PALOMAR
+                </div>
+                <div class="comedian-bio">
+                    <p>With a delightful blend of Indian culture and modern wit, Sheeva's performances are a riot of
+                        laughter. Her clever
+                        observations and relatable humor connect with diverse audiences. A rising star in the comedy
+                        circuit, Sheeva is breaking
+                        barriers and leaving a lasting comedic impact.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="comedian-container">
+        <div class="row">
+            <div class="col-12 col-md-6 comedian-image">
+                <img src="assets/images/comic9.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                    alt="Image of Johanna Dark"></a>
+            </div>
+            <div class="comedian-bio-container text-center">
+                <div class="comedian-name">
+                    JOHANNA DARK
+                </div>
+                <div class="comedian-bio">
+                    <p>With her effervescent humor and clever storytelling, Johanna brings a refreshing Welsh flair to
+                        the stage. From uproarious
+                        tales of Welsh traditions to relatable anecdotes, her performances have audiences roaring with
+                        laughter. With a magnetic
+                        presence and boundless comedic talent, Johanna is set to shine bright in the world of comedy.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="comedian-container">
+        <div class="row">
+            <div class="col-12 col-md-6 comedian-image">
+                <img src="assets/images/comic10.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
+                    alt="Image of Dutch Vanderbinde"></a>
+            </div>
+            <div class="comedian-bio-container text-center">
+                <div class="comedian-name">
+                    DUTCH VANDERBINDE
+                </div>
+                <div class="comedian-bio">
+                    <p>Having lived in England for over a decade, Dutch has an irresistible blend
+                        of humor and charm, managing to captivate audiences on stage. From clever observations of both
+                        Belgian and English
+                        cultures to lighthearted anecdotes, his performances evoke genuine laughter.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!--Footer-->
     <footer class="bg-dark text-center text-white">
