Add link to comedians page in view all comedians button

--- a/index.html
+++ b/index.html
@@ -192,52 +192,50 @@
             </div>
             <div class="row upcoming-shows">
                 <div class="col-12 col-md-6">
-                    <a href="comedians.html" target="_blank"><img src="assets/images/comic1.jpg"
-                            class="img-fluid mx-auto d-block" width="202" height="202" alt="Image of Max Vayne"></a>
+                    <img src="assets/images/comic1.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Image of Max Vayne">
                     <h3 class="text-center showname">MAX VAYNE</h3>
                 </div>
                 <div class="col-12 col-md-6">
-                    <a href="comedians.html" target="_blank"><img src="assets/images/comic2.jpg"
-                            class="img-fluid mx-auto d-block" width="202" height="202"
-                            alt="Image of Preston Harvey"></a>
+                    <img src="assets/images/comic2.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Image of Preston Harvey">
                     <h3 class="text-center showname">PRESTON HARVEY</h3>
                 </div>
                 <div class="col-12 col-md-6">
-                    <a href="comedians.html" target="_blank"><img src="assets/images/comic3.jpg"
-                            class="img-fluid mx-auto d-block" width="202" height="202" alt="Image of Sadie Padler"></a>
+                    <img src="assets/images/comic3.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Image of Sadie Padler">
                     <h3 class="text-center showname">SADIE PADLER</h3>
                 </div>
                 <div class="col-12 col-md-6">
-                    <a href="comedians.html" target="_blank"><img src="assets/images/comic4.jpg"
-                            class="img-fluid mx-auto d-block" width="202" height="202" alt="Image of Nadine Cross"></a>
+                    <img src="assets/images/comic4.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Image of Nadine Cross">
                     <h3 class="text-center showname">NADINE CROSS</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <a href="comedians.html" target="_blank"><img src="assets/images/comic5.jpg"
-                            class="img-fluid mx-auto d-block" width="202" height="202" alt="Image of Ada Wang"></a>
+                    <img src="assets/images/comic5.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Image of Ada Wang">
                     <h3 class="text-center showname">ADA WANG</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <a href="comedians.html" target="_blank"><img src="assets/images/comic6.jpg"
-                            class="img-fluid mx-auto d-block" width="202" height="202"
-                            alt="Image of Gordon Freyman"></a>
+                    <img src="assets/images/comic6.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Image of Gordon Freyman">
                     <h3 class="text-center showname">GORDON FREYMAN</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <a href="comedians.html" target="_blank"><img src="assets/images/comic7.jpg"
-                            class="img-fluid mx-auto d-block" width="202" height="202" alt="Image of Nathan Dreyk"></a>
+                    <img src="assets/images/comic7.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Image of Nathan Dreyk">
                     <h3 class="text-center showname">NATHAN DREYK</h3>
                 </div>
                 <div class="col-12 col-md-6 d-none d-md-block">
-                    <a href="comedians.html" target="_blank"><img src="assets/images/comic8.jpg"
-                            class="img-fluid mx-auto d-block" width="202" height="202"
-                            alt="Image of Sheeva Palomar"></a>
+                    <img src="assets/images/comic8.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Image of Sheeva Palomar">
                     <h3 class="text-center showname">SHEEVA PALOMAR</h3>
                 </div>
             </div>
         </div>
         <div class="text-center col-12 d-md-block">
-            <button class="btn btn-primary" aria-label="View all comedians" type="button">View all comedians</button>
+            <button class="btn btn-primary" aria-label="View all comedians" type="button"><a href="comedians.html"
+                    target="_blank" style="text-decoration:none">View all comedians</a></button>
         </div>
     </section>
 
