--- a/comedians.html
+++ b/comedians.html
@@ -23,7 +23,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="index.html">
                 <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top" alt="gigglyfox logo">
                 The Giggly Fox
             </a>
